--- a/src/imericxu/zhiheng/mazegen/sample.fxml
+++ b/src/imericxu/zhiheng/mazegen/sample.fxml
@@ -1,4 +1,17 @@
-<?import javafx.scene.layout.GridPane?>
-<GridPane xmlns:fx="http://javafx.com/fxml"
-          fx:controller="imericxu.zhiheng.mazegen.Controller" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?xml version="1.0" encoding="UTF-8"?>
+
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.FlowPane?>
+<FlowPane alignment="CENTER" prefWrapLength="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="imericxu.zhiheng.mazegen.Controller">
+    <padding>
+        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
+    </padding>
+    <TextField fx:id="inputRows" minWidth="-Infinity" prefWidth="80.0" promptText="Rows"/>
+    <TextField fx:id="inputCols" minWidth="-Infinity" prefWidth="80.0" promptText="Cols"/>
+    <ComboBox fx:id="comboMaze" prefWidth="150.0" promptText="Maze Algorithm"/>
+    <ComboBox fx:id="comboPath" prefWidth="150.0" promptText="Solve Algorithm"/>
+    <Button fx:id="btnStart" mnemonicParsing="false" onAction="#launchMaze" text="Button"/>
+</FlowPane>
