--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -9,6 +9,7 @@
       xmlns="http://javafx.com/javafx/16"
       fx:controller="imericxu.mazegen.Controller"
       stylesheets="@../stylesheets/main.css"
+      fx:id="root"
       alignment="CENTER"
       spacing="10.0">
     <padding>
