--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -7,7 +7,7 @@
 <?import org.controlsfx.control.ToggleSwitch?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
-      fx:controller="imericxu.mazegen.controller.MainController"
+      fx:controller="imericxu.mazefx.controller.MainController"
       stylesheets="@../stylesheets/main.css"
       fx:id="root"
       alignment="CENTER"
