--- a/src/main/resources/fxml/maze.fxml
+++ b/src/main/resources/fxml/maze.fxml
@@ -7,7 +7,7 @@
 <?import org.controlsfx.control.ToggleSwitch?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
-      fx:controller="imericxu.mazegen.controller.MazeController"
+      fx:controller="imericxu.mazefx.controller.MazeController"
       stylesheets="@../stylesheets/maze.css"
       fx:id="root">
 	<HBox fx:id="menu" alignment="CENTER" VBox.vgrow="NEVER">
