--- a/src/main/resources/fxml/maze.fxml
+++ b/src/main/resources/fxml/maze.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import org.controlsfx.control.ToggleSwitch?>
 <VBox xmlns:fx="http://javafx.com/fxml"
+      stylesheets="@../stylesheets/maze.css"
       xmlns="http://javafx.com/javafx"
-      fx:controller="imericxu.mazegen.controller.MazeController"
-      stylesheets="@../stylesheets/maze.css">
+      fx:controller="imericxu.mazegen.controller.MazeController">
 	<HBox id="menu" alignment="CENTER" VBox.vgrow="NEVER">
 		<Label text="Rows"/>
 		<TextField fx:id="inputRows" promptText="20"/>
@@ -20,7 +22,37 @@
 		<TextField fx:id="inputRatio" promptText="3.0"/>
 		<Region styleClass="spacer"/>
 
+		<ComboBox fx:id="comboMazeAlgorithm" maxWidth="300"/>
+		<Region styleClass="spacer"/>
+
+		<Label text="Animate"/>
+		<ToggleSwitch fx:id="switchAnimateMaze" selected="true">
+			<HBox.margin>
+				<Insets left="-28.0"/>
+			</HBox.margin>
+		</ToggleSwitch>
+		<Region styleClass="spacer"/>
+
+		<ComboBox fx:id="comboSolveAlgorithm" maxWidth="300"/>
+		<Region styleClass="spacer"/>
+
+		<Label text="Solve"/>
+		<ToggleSwitch fx:id="switchDoSolve" selected="true">
+			<HBox.margin>
+				<Insets left="-28.0"/>
+			</HBox.margin>
+		</ToggleSwitch>
+		<Region styleClass="spacer"/>
+
+		<Label text="Animate"/>
+		<ToggleSwitch fx:id="switchAnimateSolve" selected="true">
+			<HBox.margin>
+				<Insets left="-28.0"/>
+			</HBox.margin>
+		</ToggleSwitch>
+
 		<Region minWidth="30"/>
+
 		<Button onAction="#generate" text="Generate"/>
 	</HBox>
 	<Pane fx:id="canvasWrapper" VBox.vgrow="ALWAYS">
